EndofSection 4 Only Back

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings":{
     "DefaultConnection": "Data source=datingappnew.db"
   },
+  "TokenKey": "super secret Unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
