--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,13 @@
   "ConnectionStrings":{
     "DefaultConnection": "Data source=datingappnew.db"
   },
+
+  "CloudinarySettings:":{
+    "CloudName": "idevya",
+    "ApiKey":"411413428958929",
+    "ApiSecret":"RjhDc8K_J57nRHoVMlBgzdPlMBI"
+    },
+    
   "TokenKey": "super secret Unguessable key",
   "Logging": {
     "LogLevel": {
